# joka

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum  main.go  proposal_secrets_manager_template_20260716.md  pyproject.toml
.claude/skills/release/: SKILL.md
cmd/: cmd.go  data_sync.go  init.go  make.go  migrate_status.go  migrate_up.go
cmd/dbtools/: drop.go  reset.go
cmd/entity/: reimport.go  status.go  sync.go  update.go
cmd/lock/: unlock.go
cmd/migration/: consolidate.go  init.go  make.go  snapshot.go  status.go  up.go  verify.go
cmd/shared/: confirm.go  output.go  output_test.go
cmd/template/: sync.go
config/: config.go  config_test.go
db/: db.go  split.go  split_test.go
internal/connection/: aws.go  connection.go  connection_test.go
internal/domains/lock/: domain_spec.md
internal/domains/migration/: domain_spec.md  spec.md
internal/domains/template/: domain_spec.md  spec.md
internal/secrets/: secrets.go  secrets_test.go
joka/: __main__.py
joka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
joka/commands/: __init__.py  init.py  make.py
joka/db/: models.py
joka/entities/: migration.py
joka/files/: models.py
joka/infra/: cli.py  db.py  fs.py
joka/models/: config.py  migration.py  migration_file.py  migration_model.py  record.py  schema.py  table.py
joka/services/: db.py  fs.py  migrations.py  state.py  templates.py
joka/subcommands/: __init__.py  init.py  make.py  status.py  up.py
testlib/: container.go  postgres_container.go
tests/: conftest.py  test_db.py  test_sync.py  test_templates.py
(+81 files in other folders)
